--- a/pyengine/pyengine.vcxproj.filters
+++ b/pyengine/pyengine.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="common">
+      <UniqueIdentifier>{e89c7c86-c08a-416e-91e2-ddf60c58eafb}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -21,5 +24,22 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="pyengine.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="common\sys.cpp">
+      <Filter>common</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="pyengine.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="common\sys.h">
+      <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="common\platform.h">
+      <Filter>common</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
