--- a/pyengine/pyengine.vcxproj
+++ b/pyengine/pyengine.vcxproj
@@ -74,6 +74,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>E:\CODE\project_1\Python-3.5.0\PC;E:\CODE\project_1\Python-3.5.0\Include;$(ProjectDir);$(ProjectDir)common;E:\CODE\boost_1_59_0;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\CODE\project_1\Python-3.5.0\PCbuild\amd64;E:\CODE\boost_1_59_0\stage\vc14\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -145,7 +147,14 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="common\sys.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="pyengine.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="common\platform.h" />
+    <ClInclude Include="common\sys.h" />
+    <ClInclude Include="pyengine.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
